--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,13 @@
 version: 2.1
 
+commands:
+  delete_stack:
+    steps:
+      - run:
+          name: destroy stack on failure
+          command: |
+            aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
+
 jobs:
   create_infrastructure:
     docker:
@@ -11,9 +19,21 @@ jobs:
           command: |
             aws cloudformation deploy \
               --stack-name newEC2 --template-file .circleci/template.yml \
-              --capabilities "CAPABILITY_IAM" "CAPABILITY_NAMED_IAM" \
+
+  destroy_infrastructure:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      -checkout
+      - run:
+          name: create error
+          command: |
+            return 1
+      - delete_stack
+        when: on_fail
             
 workflows:
   cloudformation-ec2:
     jobs:
       - create_infrastructure
+      - destroy_infrastructure
