--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,6 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       - create_infrastructure
-      - destroy_infrastructure
+      - destroy_infrastructure:
+          requires:
+            - create_infrastructure
