--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,10 @@ commands:
     steps:
       - run:
           name: destroy stack on failure
+          when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
+            aws cloudformation delete-stack prod-${CIRCLE_WORKFLOW_ID}
+            exit 1
 
 jobs:
   create_infrastructure:
@@ -19,26 +21,13 @@ jobs:
           name: "cloudformation build ec2"
           command: |
             aws cloudformation deploy \
-              --stack-name newEC2 --template-file .circleci/template.yml \
-
-  destroy_infrastructure:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run:
-          name: delete when fail
-          command: |
-            return 1
-            when: on_fail
-            - delete_stack
+              --template-file .circleci/template.yml \
+              --stack-name prod-${CIRCLE_WORKFLOW_ID}
+      - run: return 1
+      - delete_stack
 
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  # Name the workflow "create_delete"
+  create_delete:
     jobs:
       - create_infrastructure
-      - destroy_infrastructure:
-          requires:
-            - create_infrastructure
