--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ commands:
     steps:
       - run:
           name: destroy stack on failure
-          command: "aws cloudformation delete-stack newEC2"
+          command: aws cloudformation delete-stack newEC2
           when: on_fail
 jobs:
   build:
@@ -20,7 +20,6 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/template.yml \
               --stack-name newEC2
-      - run: True
       - delete_stack
 
 workflows:
